add GetUserById
